[package]
name = "perf-gauge"
version = "0.1.8"
authors = ["Eugene Retunsky"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = true
readme = "README.md"
repository = "https://github.com/xnuter/perf-gauge"
homepage = "https://github.com/xnuter/perf-gauge"
description = """
Gauging performance of network services. Snapshot or continuous, supports Prometheus metrics.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
reqwest = { version = "0.11", features = ["hyper-tls", "stream"] }
base64="0.13"
derive_builder = "0.9"
log = "0.4"
log4rs = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
histogram = "0.6"
leaky-bucket = "0.10"
async-trait = "0.1"
bytesize = "1.0"
humantime = "2.0"
regex = "1.3"
prometheus = {version = "0.11", features=["push"] }
rand = "0.8"
futures-util = "0.3"

[dev-dependencies]
mockito = "0.28"
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
