[package]
name = "perf-gauge"
version = "0.1.19"
authors = ["Eugene Retunsky"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = true
readme = "README.md"
repository = "https://github.com/xnuter/perf-gauge"
homepage = "https://github.com/xnuter/perf-gauge"
description = """
Gauging performance of network services. Snapshot or continuous, supports Prometheus metrics.
"""

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
base64 = "0.13"
derive_builder = "0.9"
log = "0.4"
log4rs = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
histogram = "0.6"
leaky-bucket = "0.12.1"
async-trait = "0.1"
bytesize = "1.0"
humantime = "2.0"
regex = "1.3"
rand = "0.8"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
prometheus = { version = "0.13", features = ["push"], default-features = false, optional = true }
hyper-tls = {version = "0.5", default-features = false, optional = true }
native-tls = {version = "0.2", default-features = false, optional = true }
tokio-native-tls = {version = "0.3", default-features = false, optional = true }
hyper-boring = {version = "2", default-features = false, optional = true }
boring = {version = "1", default-features = false, optional = true }

[dev-dependencies]
mockito = "0.28"
tokio-test = "0.4"

[features]
default = []
report-to-prometheus = ["prometheus"]
tls = ["hyper-tls"]
tls-native = ["tls", "native-tls", "tokio-native-tls"]
tls-boring = ["tls", "hyper-boring", "boring"]
full = ["report-to-prometheus", "tls-native"]
full-boring = ["report-to-prometheus", "tls-boring"]
