[package]
name = "perf-gauge"
version = "0.1.20"
authors = ["Eugene Retunsky"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = true
readme = "README.md"
repository = "https://github.com/xnuter/perf-gauge"
homepage = "https://github.com/xnuter/perf-gauge"
description = """
Gauging performance of network services. Snapshot or continuous, supports Prometheus metrics.
"""

[dependencies]
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
derive_builder = "0.20"
log = "0.4"
log4rs = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
histogram = "1.5"
leaky-bucket = "1.1"
async-trait = "0.1"
bytesize = "1.3"
humantime = "2.1"
rand = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = { version = "1", features = ["serde"] }
prometheus = { version = "0.13", features = ["push"], default-features = false, optional = true }
hyper-tls = {version = "0.6", default-features = false, optional = true }
native-tls = {version = "0.2", default-features = false, optional = true }
tokio-native-tls = {version = "0.3", default-features = false, optional = true }
hyper-boring = {version = "5.0", default-features = false, optional = true }
boring = {version = "5.1", default-features = false, optional = true }

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"

[features]
default = []
report-to-prometheus = ["prometheus"]
tls = ["hyper-tls"]
tls-native = ["tls", "native-tls", "tokio-native-tls"]
tls-boring = ["tls", "hyper-boring", "boring"]
full = ["report-to-prometheus", "tls-native"]
full-boring = ["report-to-prometheus", "tls-boring"]
